...
            android:layout_marginTop="32dp"
            android:hint="ID"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_https_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

...
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Termsetter.TextButton.Small"
                android:id="@+id/buttonCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignBaseline="@id/buttonLogin"
                android:text="CREATE ACCOUNT"
                android:onClick="onClickCreateAccountButton"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Termsetter.ConfirmButton"
                android:id="@+id/buttonLogin"
...
