...
    android:background="@color/colorBackground"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <CheckBox
        android:id="@+id/course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
...
