...
            android:id="@+id/recycleEnrolledClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/unenrollmentBackButton"
            android:layout_above="@+id/unenrollButton"
            android:gravity="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/unenrollButton"
            android:layout_width="match_parent"
...
