<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Presentation.AccountUpdateEmail">


    <LinearLayout
        android:id="@+id/contentUpdateEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="true"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Termsetter.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/header_update_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/promptCurrentEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/txt_update_email_prompt1" />

                <TextView
                    android:id="@+id/userInfoCurrentEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_update_email_current_email" />
            </LinearLayout>

            <TextView
                android:id="@+id/promptNewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_update_email_prompt2" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Termsetter.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/txt_update_email_hint1"
                android:inputType="textEmailAddress"
                app:helperTextEnabled="true"
                app:helperText="Must be a @myumanitoba.ca email address"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/promptConfirmEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_update_email_prompt3"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Termsetter.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_update_email_hint1"
                android:inputType="textEmailAddress"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Termsetter.TextButton.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/buttonConfirmEmail"
                    android:onClick="emailBackToAccountMenu"
                    android:text="◀ Account Menu"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Termsetter.ConfirmButton"
                    android:id="@+id/buttonConfirmEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="updateEmail"
                    android:text="@string/btn_update_email_confirm" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>