...
            android:layout_marginEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleEnrolledClasses"
...
